# wyoming-whisper-cpp

./: .gitmodules  CMakeLists.txt  README.md  requirements.txt  setup.py
wyoming/: CMakeLists.txt
wyoming_whisper_cpp/: __main__.py  download.py
